syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.test.proto";
option java_outer_classname = "ApolloTestProto";
option objc_class_prefix = "ATp";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package apollo.test; 

service TestIt {
    rpc ping ( google.protobuf.Any ) returns (google.protobuf.Any) {}
}